# figma-clone

./: .gitignore  PRD.md  README.md  architecture.md  tasks.md
.cursor/rules/: code-documentation.mdc  enterprise-standards.mdc  project-structure.mdc  tdd-workflow.mdc
collab-canvas/: docker-compose.yml
collab-canvas/client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
collab-canvas/server/: .env.example  pyproject.toml
collab-canvas/server/alembic/: env.py
collab-canvas/server/alembic/versions/: 9e939e8b749c_create_users_canvases_elements_tables.py  b2c4d6e8f0a1_add_canvas_memberships_table.py
collab-canvas/server/app/: main.py
collab-canvas/server/app/api/routes/: auth.py  canvas.py  elements.py  share.py
collab-canvas/server/app/core/: config.py  security.py
collab-canvas/server/app/db/: base.py  session.py
collab-canvas/server/app/models/: canvas.py  canvas_membership.py  element.py  user.py
collab-canvas/server/app/redis/: __init__.py  client.py  locks.py  presence.py
collab-canvas/server/app/schemas/: auth.py  canvas.py  element.py
collab-canvas/server/app/services/: auth_service.py  canvas_service.py  element_service.py  lock_service.py  lock_user_tracker.py  presence_service.py  realtime_sync_service.py  user_palette.py
collab-canvas/server/app/tests/: conftest.py  test_a_presence.py  test_auth.py  test_canvas.py  test_elements.py  test_locking.py  test_models.py  test_presence.py  test_share.py  test_websocket.py
collab-canvas/server/app/websocket/: __init__.py  events.py  manager.py  router.py  ws_auth.py
(+79 files in other folders)
