[project]
name = "server"
version = "0.1.0"
description = "Collab Canvas — real-time collaborative design tool backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fakeredis>=2.20.0",
    "alembic>=1.12.1",
    "fastapi[standard]>=0.103.2",
    "pydantic-settings>=2.0.3",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
